--- a/templates/push/pushes.twig
+++ b/templates/push/pushes.twig
@@ -13,7 +13,7 @@
 
     {% include '_partial-job/push-table.twig' with {'pushes': pushes} %}
 
-    {{ pagination.pagination(page, last, 'push.history', {'id': application.id}, {search: search_filter}) }}
+    {{ pagination.pagination(page, last, 'push.history', {'application': application.id}, {search: search_filter}) }}
 
 {% endblock %}
 
@@ -31,7 +31,7 @@
         <input class="btn" type="submit" value="Filter">
 
         {% if search_filter %}
-            <a class="btn btn--action" href="{{ urlFor('push.history.page1', {id: application.id}) }}">Reset</a>
+            <a class="btn btn--action" href="{{ urlFor('push.history.page1', {'application': application.id}) }}">Reset</a>
         {% endif %}
     </form>
 {% endblock %}
