Update environment admin template names

--- a/templates/application/deployment/deployments.twig
+++ b/templates/application/deployment/deployments.twig
@@ -74,7 +74,7 @@
         <p>
             There are no environments.
             {% if isUserSuper(currentUser) %}
-                <br><a href="{{ urlFor('environment.admin.add') }}">Add an environment</a>
+                <br><a href="{{ urlFor('environment.add') }}">Add an environment</a>
             {% endif %}
         </p>
     {% endif %}
