--- a/templates/kraken/configuration/rollback.twig
+++ b/templates/kraken/configuration/rollback.twig
@@ -4,6 +4,8 @@
 
 {% set page_title = "Rollback Configuration" %}
 
+{% set isBusinessTime = isSeriousBusinessMode() %}
+
 {% block content %}
 
     <h1>{{ page_title }}</h1>
@@ -42,9 +44,11 @@
 
     {% else %}
 
+        {% set deploy_label = isBusinessTime ? 'Rollback Configuration' : 'Release the kraken' %}
+
         <form class="form-wrapper" method="post">
             <ul class="button-list">
-                <li><input type="submit" class="btn btn--action" value="Rollback Configuration"></li>
+                <li><input type="submit" class="btn btn--action" value="{{ deploy_label }}"></li>
                 <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration', {configuration: configuration.id}) }}">Cancel</a></li>
             </ul>
         </form>
