--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -40,7 +40,7 @@
                 </li>
 
                 <li>
-                    <h3 class="zeta label">Github Source</h3>
+                    <h5 class="label">Github Source</h5>
                     {{ macros.gitsource(application) }}
                     <small class="additional">Please contact a HAL administrator to change this setting.</small>
                 </li>
