Add upgrade docs for 2.6.1

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -234,21 +234,13 @@ beta
 
     <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
     <ul class="list--bullet">
-        <li>
-            <a href="/docs/2.4/release-notes.html">2.4</a>
-        </li>
-        <li>
-            <a href="/docs/2.4.1/release-notes.html">2.4.1</a>
-        </li>
-        <li>
-            <a href="/docs/2.4.2/release-notes.html">2.4.2</a>
-        </li>
-        <li>
-            <a href="/docs/2.5/release-notes.html">2.5</a>
-        </li>
-        <li>
-            <a href="/docs/2.6/release-notes.html">2.6</a>
-        </li>
+        <li><a href="/docs/2.4/release-notes.html">2.4</a></li>
+        <li><a href="/docs/2.4.1/release-notes.html">2.4.1</a></li>
+        <li><a href="/docs/2.4.2/release-notes.html">2.4.2</a></li>
+        <li><a href="/docs/2.5/release-notes.html">2.5</a></li>
+        <li><a href="/docs/2.6/release-notes.html">2.6</a></li>
+        <li><a href="/docs/2.6.1/release-notes.html">2.6.1</a></li>
+        <li><a href="/docs/2.6.2/release-notes.html">2.6.2</a> (tbd)</li>
     </ul>
 {% endblock %}
 
