Allow build-table in progress builds to be updated and add commit, fix css bullshit

--- a/sass/app/_cards.scss
+++ b/sass/app/_cards.scss
@@ -53,8 +53,11 @@
 }
 
 .card__header {
-    h4 {
-        margin: 0;
+    > h4 {
+        // margin: 0;
+
+        // because css is stupid garbage bullshit
+        margin: .01em;
         padding: ms(-10);
     }
 
