--- a/templates/_partial/macros.twig
+++ b/templates/_partial/macros.twig
@@ -153,9 +153,9 @@
 
     {% elseif allowUpdates %}
         {% if job is push %}
-            {{ self_macros.status_icon(job.status, 'thinking', {'data-push': job.id}) }}
+            {{ self_macros.status_icon(job.status, 'thinking', {'data-push': job.id, 'data-status': job.status}) }}
         {% else %}
-            {{ self_macros.status_icon(job.status, 'thinking', {'data-build': job.id}) }}
+            {{ self_macros.status_icon(job.status, 'thinking', {'data-build': job.id, 'data-status': job.status}) }}
         {% endif %}
 
     {% else %}
@@ -164,12 +164,13 @@
 
 {% endmacro %}
 
-{% macro job_status_prefix(job) %}
+{% macro job_status_prefix(job, withoutPrefix) %}
     {% import _self as self_macros %}
 
     {% if job is push %}
 
-        {% set push_link = self_macros.job_status_prefix_link(job) %}
+        {% set prefix = withoutPrefix ? '' : 'Push ' %}
+        {% set push_link = self_macros.job_status_prefix_link(job, prefix) %}
 
         {% if job.status == 'Success' %}
             {{ self_macros.status_icon(push_link, 'success') }}
@@ -181,7 +182,8 @@
 
     {% else %}
 
-        {% set build_link = self_macros.job_status_prefix_link(job) %}
+        {% set prefix = withoutPrefix ? '' : 'Build ' %}
+        {% set build_link = self_macros.job_status_prefix_link(job, prefix) %}
 
         {% if job.status == 'Success' %}
             {{ self_macros.status_icon(build_link, 'success') }}
@@ -195,10 +197,10 @@
 
 {% endmacro %}
 
-{% macro job_status_prefix_link(job) %}
+{% macro job_status_prefix_link(job, prefix) %}
     {% if job is push %}
-        Push <a href="{{ urlFor('push', {'push': job.id}) }}">{{ job.id|formatPushId }}</a>
+        {{ prefix }}<a href="{{ urlFor('push', {'push': job.id}) }}">{{ job.id|formatPushId }}</a>
     {% else %}
-        Build <a href="{{ urlFor('build', {'build': job.id}) }}">{{ job.id|formatBuildId }}</a>
+        {{ prefix }}<a href="{{ urlFor('build', {'build': job.id}) }}">{{ job.id|formatBuildId }}</a>
     {% endif %}
 {% endmacro %}
