--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -4,9 +4,9 @@
     <thead>
         <tr>
             <th>Build</th>
-            <th>Status</th>
             <th>Env</th>
             <th>Reference</th>
+            <th>Commit</th>
             <th>User</th>
             <th>Time</th>
             <th class="t10"></th>
@@ -15,14 +15,14 @@
     <tbody>
     {% for build in builds %}
         <tr>
-
-            <td><a href="{{ urlFor('build', {'repo': build.application.id, 'build': build.id}) }}">{{ build.id|formatBuildId }}</a></td>
-            <td>
-                {{ macros.job_status(build, true) }}
-            </td>
+            <td>{{ macros.job_status_prefix(build, true) }}</td>
             <td>{{ build.environment.name }}</td>
             <td>
-                {{ macros.gitref(build, true) }}
+                {% set isCurrent = githubCommitIsCurrent(build.application.githubOwner, build.application.githubRepo, build.branch, build.commit) %}
+                {{ macros.gitref(build, false, isCurrent, true) }}
+            </td>
+            <td>
+                {{ macros.gitcommit(build) }}
             </td>
             <td>
                 {% if build.user %}
